@@ -1,3 +1,8 @@
+2002-01-22  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (dir): prevented possible 'divide by zero' error.
+	[Bug #496584]
+
 2001-12-14  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl: 'tkcon show' causes loss of focus on Windows, so an
